--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
     "react-toastify": "^10.0.4",
     "reactstrap": "^9.2.2",
+    "slick-carousel": "^1.8.1",
     "sunweb": "^1.1.0",
     "tronweb": "^5.3.2",
     "web-vitals": "^2.1.4"
